Updated trinity api reference

--- a/static/references/trinity_plugins/enums/appmanagerplugin.messagetype.html
+++ b/static/references/trinity_plugins/enums/appmanagerplugin.messagetype.html
@@ -86,10 +86,13 @@
 						<section class="tsd-index-section tsd-is-not-exported">
 							<h3>Enumeration members</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="appmanagerplugin.messagetype.html#external_install" class="tsd-kind-icon">EXTERNAL_<wbr>INSTALL</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="appmanagerplugin.messagetype.html#external_launcher" class="tsd-kind-icon">EXTERNAL_<wbr>LAUNCHER</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="appmanagerplugin.messagetype.html#external" class="tsd-kind-icon">EXTERNAL</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="appmanagerplugin.messagetype.html#ex_install" class="tsd-kind-icon">EX_<wbr>INSTALL</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="appmanagerplugin.messagetype.html#ex_launcher" class="tsd-kind-icon">EX_<wbr>LAUNCHER</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="appmanagerplugin.messagetype.html#ex_return" class="tsd-kind-icon">EX_<wbr>RETURN</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="appmanagerplugin.messagetype.html#installing" class="tsd-kind-icon">INSTALLING</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="appmanagerplugin.messagetype.html#internal" class="tsd-kind-icon">INTERNAL</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="appmanagerplugin.messagetype.html#in_refresh" class="tsd-kind-icon">IN_<wbr>REFRESH</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="appmanagerplugin.messagetype.html#in_return" class="tsd-kind-icon">IN_<wbr>RETURN</a></li>
 							</ul>
 						</section>
@@ -99,9 +102,21 @@
 			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
 				<h2>Enumeration members</h2>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="external_install" class="tsd-anchor"></a>
-					<h3>EXTERNAL_<wbr>INSTALL</h3>
-					<div class="tsd-signature tsd-kind-icon">EXTERNAL_<wbr>INSTALL<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;4</span></div>
+					<a name="external" class="tsd-anchor"></a>
+					<h3>EXTERNAL</h3>
+					<div class="tsd-signature tsd-kind-icon">EXTERNAL<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;11</span></div>
+					<aside class="tsd-sources">
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The external message</p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+					<a name="ex_install" class="tsd-anchor"></a>
+					<h3>EX_<wbr>INSTALL</h3>
+					<div class="tsd-signature tsd-kind-icon">EX_<wbr>INSTALL<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;13</span></div>
 					<aside class="tsd-sources">
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -111,9 +126,9 @@
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="external_launcher" class="tsd-anchor"></a>
-					<h3>EXTERNAL_<wbr>LAUNCHER</h3>
-					<div class="tsd-signature tsd-kind-icon">EXTERNAL_<wbr>LAUNCHER<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;3</span></div>
+					<a name="ex_launcher" class="tsd-anchor"></a>
+					<h3>EX_<wbr>LAUNCHER</h3>
+					<div class="tsd-signature tsd-kind-icon">EX_<wbr>LAUNCHER<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;12</span></div>
 					<aside class="tsd-sources">
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -125,12 +140,24 @@
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
 					<a name="ex_return" class="tsd-anchor"></a>
 					<h3>EX_<wbr>RETURN</h3>
-					<div class="tsd-signature tsd-kind-icon">EX_<wbr>RETURN<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;5</span></div>
+					<div class="tsd-signature tsd-kind-icon">EX_<wbr>RETURN<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;14</span></div>
 					<aside class="tsd-sources">
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
 							<p>The external return message.</p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+					<a name="installing" class="tsd-anchor"></a>
+					<h3>INSTALLING</h3>
+					<div class="tsd-signature tsd-kind-icon">INSTALLING<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;4</span></div>
+					<aside class="tsd-sources">
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The installing message.</p>
 						</div>
 					</div>
 				</section>
@@ -143,6 +170,18 @@
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
 							<p>The internal message</p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+					<a name="in_refresh" class="tsd-anchor"></a>
+					<h3>IN_<wbr>REFRESH</h3>
+					<div class="tsd-signature tsd-kind-icon">IN_<wbr>REFRESH<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;3</span></div>
+					<aside class="tsd-sources">
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The internal refresh message.</p>
 						</div>
 					</div>
 				</section>
@@ -197,7 +236,13 @@
 						<a href="../modules/didplugin.html">DIDPlugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="../modules/fingerprintplugin.html">Fingerprint<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/hiveplugin.html">Hive<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="../modules/titlebarplugin.html">Title<wbr>Bar<wbr>Plugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/walletplugin.html">Wallet<wbr>Plugin</a>
@@ -215,16 +260,25 @@
 						<a href="appmanagerplugin.messagetype.html" class="tsd-kind-icon">Message<wbr>Type</a>
 						<ul>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="appmanagerplugin.messagetype.html#external_install" class="tsd-kind-icon">EXTERNAL_<wbr>INSTALL</a>
+								<a href="appmanagerplugin.messagetype.html#external" class="tsd-kind-icon">EXTERNAL</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="appmanagerplugin.messagetype.html#external_launcher" class="tsd-kind-icon">EXTERNAL_<wbr>LAUNCHER</a>
+								<a href="appmanagerplugin.messagetype.html#ex_install" class="tsd-kind-icon">EX_<wbr>INSTALL</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+								<a href="appmanagerplugin.messagetype.html#ex_launcher" class="tsd-kind-icon">EX_<wbr>LAUNCHER</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
 								<a href="appmanagerplugin.messagetype.html#ex_return" class="tsd-kind-icon">EX_<wbr>RETURN</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+								<a href="appmanagerplugin.messagetype.html#installing" class="tsd-kind-icon">INSTALLING</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
 								<a href="appmanagerplugin.messagetype.html#internal" class="tsd-kind-icon">INTERNAL</a>
+							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+								<a href="appmanagerplugin.messagetype.html#in_refresh" class="tsd-kind-icon">IN_<wbr>REFRESH</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
 								<a href="appmanagerplugin.messagetype.html#in_return" class="tsd-kind-icon">IN_<wbr>RETURN</a>
