--- a/static/references/trinity_plugins/globals.html
+++ b/static/references/trinity_plugins/globals.html
@@ -78,7 +78,9 @@
 								<li class="tsd-kind-module tsd-is-not-exported"><a href="modules/cordovamediacaptureplugin.html" class="tsd-kind-icon">Cordova<wbr>Media<wbr>Capture<wbr>Plugin</a></li>
 								<li class="tsd-kind-module tsd-is-not-exported"><a href="modules/cordovanetworkinfoplugin.html" class="tsd-kind-icon">Cordova<wbr>Network<wbr>Info<wbr>Plugin</a></li>
 								<li class="tsd-kind-module tsd-is-not-exported"><a href="modules/didplugin.html" class="tsd-kind-icon">DIDPlugin</a></li>
+								<li class="tsd-kind-module tsd-is-not-exported"><a href="modules/fingerprintplugin.html" class="tsd-kind-icon">Fingerprint<wbr>Plugin</a></li>
 								<li class="tsd-kind-module tsd-is-not-exported"><a href="modules/hiveplugin.html" class="tsd-kind-icon">Hive<wbr>Plugin</a></li>
+								<li class="tsd-kind-module tsd-is-not-exported"><a href="modules/titlebarplugin.html" class="tsd-kind-icon">Title<wbr>Bar<wbr>Plugin</a></li>
 								<li class="tsd-kind-module tsd-is-not-exported"><a href="modules/walletplugin.html" class="tsd-kind-icon">Wallet<wbr>Plugin</a></li>
 							</ul>
 						</section>
@@ -92,7 +94,6 @@
 								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/navigator.html" class="tsd-kind-icon">Navigator</a></li>
 								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/notification.html" class="tsd-kind-icon">Notification</a></li>
 								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/notificationpromptresult.html" class="tsd-kind-icon">Notification<wbr>Prompt<wbr>Result</a></li>
-								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/statusbar.html" class="tsd-kind-icon">Status<wbr>Bar</a></li>
 								<li class="tsd-kind-interface tsd-is-not-exported"><a href="interfaces/window.html" class="tsd-kind-icon">Window</a></li>
 							</ul>
 						</section>
@@ -100,7 +101,6 @@
 							<h3>Variables</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-variable tsd-is-not-exported"><a href="globals.html#media" class="tsd-kind-icon">Media</a></li>
-								<li class="tsd-kind-variable tsd-is-not-exported"><a href="globals.html#statusbar" class="tsd-kind-icon">Status<wbr>Bar</a></li>
 								<li class="tsd-kind-variable tsd-is-not-exported"><a href="globals.html#device" class="tsd-kind-icon">device</a></li>
 							</ul>
 						</section>
@@ -212,13 +212,6 @@
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-is-not-exported">
-					<a name="statusbar" class="tsd-anchor"></a>
-					<h3>Status<wbr>Bar</h3>
-					<div class="tsd-signature tsd-kind-icon">Status<wbr>Bar<span class="tsd-signature-symbol">:</span> <a href="interfaces/statusbar.html" class="tsd-signature-type">StatusBar</a></div>
-					<aside class="tsd-sources">
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-variable tsd-is-not-exported">
 					<a name="device" class="tsd-anchor"></a>
 					<h3>device</h3>
 					<div class="tsd-signature tsd-kind-icon">device<span class="tsd-signature-symbol">:</span> <a href="interfaces/cordovadeviceplugin.device.html" class="tsd-signature-type">Device</a></div>
@@ -264,7 +257,13 @@
 						<a href="modules/didplugin.html">DIDPlugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="modules/fingerprintplugin.html">Fingerprint<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="modules/hiveplugin.html">Hive<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="modules/titlebarplugin.html">Title<wbr>Bar<wbr>Plugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="modules/walletplugin.html">Wallet<wbr>Plugin</a>
@@ -295,16 +294,10 @@
 						<a href="interfaces/notificationpromptresult.html" class="tsd-kind-icon">Notification<wbr>Prompt<wbr>Result</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-is-not-exported">
-						<a href="interfaces/statusbar.html" class="tsd-kind-icon">Status<wbr>Bar</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-not-exported">
 						<a href="interfaces/window.html" class="tsd-kind-icon">Window</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-not-exported">
 						<a href="globals.html#media" class="tsd-kind-icon">Media</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-is-not-exported">
-						<a href="globals.html#statusbar" class="tsd-kind-icon">Status<wbr>Bar</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-not-exported">
 						<a href="globals.html#device" class="tsd-kind-icon">device</a>
