--- a/static/references/trinity_plugins/interfaces/carrierplugin.carrier.html
+++ b/static/references/trinity_plugins/interfaces/carrierplugin.carrier.html
@@ -1287,7 +1287,7 @@
 					<a name="newgroup" class="tsd-anchor"></a>
 					<h3>new<wbr>Group</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface tsd-is-not-exported">
-						<li class="tsd-signature tsd-kind-icon">new<wbr>Group<span class="tsd-signature-symbol">(</span>callbacks<span class="tsd-signature-symbol">: </span><a href="../modules/carrierplugin.html#carriercallbacks" class="tsd-signature-type">CarrierCallbacks</a>, onSuccess<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">function</span>, onError<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">function</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
+						<li class="tsd-signature tsd-kind-icon">new<wbr>Group<span class="tsd-signature-symbol">(</span>callbacks<span class="tsd-signature-symbol">: </span><a href="../modules/carrierplugin.html#groupcallbacks" class="tsd-signature-type">GroupCallbacks</a>, onSuccess<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">function</span>, onError<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">function</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
@@ -1302,7 +1302,7 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>callbacks: <a href="../modules/carrierplugin.html#carriercallbacks" class="tsd-signature-type">CarrierCallbacks</a></h5>
+									<h5>callbacks: <a href="../modules/carrierplugin.html#groupcallbacks" class="tsd-signature-type">GroupCallbacks</a></h5>
 								</li>
 								<li>
 									<h5>onSuccess: <span class="tsd-signature-type">function</span></h5>
@@ -1855,7 +1855,13 @@
 						<a href="../modules/didplugin.html">DIDPlugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="../modules/fingerprintplugin.html">Fingerprint<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/hiveplugin.html">Hive<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="../modules/titlebarplugin.html">Title<wbr>Bar<wbr>Plugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/walletplugin.html">Wallet<wbr>Plugin</a>
