--- a/static/references/trinity_plugins/modules/appmanagerplugin.html
+++ b/static/references/trinity_plugins/modules/appmanagerplugin.html
@@ -345,6 +345,14 @@
 									</div>
 								</div>
 							</li>
+							<li class="tsd-parameter">
+								<h5>version<wbr>Code<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></h5>
+								<div class="tsd-comment tsd-typography">
+									<div class="lead">
+										<p>The app version code.</p>
+									</div>
+								</div>
+							</li>
 						</ul>
 					</div>
 				</section>
@@ -642,7 +650,7 @@
 								</div>
 							</li>
 							<li class="tsd-parameter">
-								<h5>msg<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></h5>
+								<h5>message<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></h5>
 								<div class="tsd-comment tsd-typography">
 									<div class="lead">
 										<p>The message receive</p>
@@ -732,7 +740,13 @@
 						<a href="didplugin.html">DIDPlugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="fingerprintplugin.html">Fingerprint<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="hiveplugin.html">Hive<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="titlebarplugin.html">Title<wbr>Bar<wbr>Plugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="walletplugin.html">Wallet<wbr>Plugin</a>
