--- a/static/references/trinity_plugins/modules/carrierplugin.html
+++ b/static/references/trinity_plugins/modules/carrierplugin.html
@@ -717,7 +717,7 @@
 							<li class="tsd-parameter">
 								<h5>on<wbr>Group<wbr>Invite<span class="tsd-signature-symbol">: </span>function</h5>
 								<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-type-literal tsd-is-not-exported">
-									<li class="tsd-signature tsd-kind-icon">on<wbr>Group<wbr>Invite<span class="tsd-signature-symbol">(</span>carrier<span class="tsd-signature-symbol">: </span><a href="../interfaces/carrierplugin.carrier.html" class="tsd-signature-type">Carrier</a>, groupTitle<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
+									<li class="tsd-signature tsd-kind-icon">on<wbr>Group<wbr>Invite<span class="tsd-signature-symbol">(</span>carrier<span class="tsd-signature-symbol">: </span><a href="../interfaces/carrierplugin.carrier.html" class="tsd-signature-type">Carrier</a>, cookieCode<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
 								</ul>
 								<ul class="tsd-descriptions">
 									<li class="tsd-description">
@@ -742,9 +742,9 @@
 												</div>
 											</li>
 											<li>
-												<h5>groupTitle: <span class="tsd-signature-type">string</span></h5>
+												<h5>cookieCode: <span class="tsd-signature-type">string</span></h5>
 												<div class="tsd-comment tsd-typography">
-													<p>Current group title</p>
+													<p>cookie code used to join group.</p>
 												</div>
 											</li>
 										</ul>
@@ -2152,7 +2152,13 @@
 						<a href="didplugin.html">DIDPlugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="fingerprintplugin.html">Fingerprint<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="hiveplugin.html">Hive<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="titlebarplugin.html">Title<wbr>Bar<wbr>Plugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="walletplugin.html">Wallet<wbr>Plugin</a>
