--- a/static/references/trinity_plugins/enums/titlebarplugin.titlebaractivitytype.html
+++ b/static/references/trinity_plugins/enums/titlebarplugin.titlebaractivitytype.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>StreamMode | Trinity Plugins API Reference</title>
+	<title>TitleBarActivityType | Trinity Plugins API Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,13 +54,13 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/carrierplugin.html">CarrierPlugin</a>
+					<a href="../modules/titlebarplugin.html">TitleBarPlugin</a>
 				</li>
 				<li>
-					<a href="carrierplugin.streammode.html">StreamMode</a>
+					<a href="titlebarplugin.titlebaractivitytype.html">TitleBarActivityType</a>
 				</li>
 			</ul>
-			<h1>Enumeration StreamMode</h1>
+			<h1>Enumeration TitleBarActivityType</h1>
 		</div>
 	</div>
 </header>
@@ -69,14 +69,10 @@
 		<div class="col-8 col-content">
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
-					<dl class="tsd-comment-tags">
-						<dt>description</dt>
-						<dd><p>Carrier stream mode.</p>
-						</dd>
-						<dt>enum</dt>
-						<dd><p>{number}</p>
-						</dd>
-					</dl>
+					<div class="lead">
+						<p>Type of activity indicators that the title bar can display.
+						Activity indicators are icon animations showing that something is currently busy.</p>
+					</div>
 				</div>
 			</section>
 			<section class="tsd-panel-group tsd-index-group">
@@ -86,11 +82,10 @@
 						<section class="tsd-index-section tsd-is-not-exported">
 							<h3>Enumeration members</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="carrierplugin.streammode.html#compress" class="tsd-kind-icon">COMPRESS</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="carrierplugin.streammode.html#multiplexing" class="tsd-kind-icon">MULTIPLEXING</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="carrierplugin.streammode.html#plain" class="tsd-kind-icon">PLAIN</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="carrierplugin.streammode.html#port_forwarding" class="tsd-kind-icon">PORT_<wbr>FORWARDING</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="carrierplugin.streammode.html#reliable" class="tsd-kind-icon">RELIABLE</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="titlebarplugin.titlebaractivitytype.html#download" class="tsd-kind-icon">DOWNLOAD</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="titlebarplugin.titlebaractivitytype.html#launch" class="tsd-kind-icon">LAUNCH</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="titlebarplugin.titlebaractivitytype.html#other" class="tsd-kind-icon">OTHER</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="titlebarplugin.titlebaractivitytype.html#upload" class="tsd-kind-icon">UPLOAD</a></li>
 							</ul>
 						</section>
 					</div>
@@ -99,71 +94,50 @@
 			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
 				<h2>Enumeration members</h2>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="compress" class="tsd-anchor"></a>
-					<h3>COMPRESS</h3>
-					<div class="tsd-signature tsd-kind-icon">COMPRESS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1</span></div>
+					<a name="download" class="tsd-anchor"></a>
+					<h3>DOWNLOAD</h3>
+					<div class="tsd-signature tsd-kind-icon">DOWNLOAD<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;0</span></div>
 					<aside class="tsd-sources">
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>Compress option, indicates data would be compressed before transmission.
-							For now, just reserved this bit option for future implement.</p>
+							<p>There is an on going download.</p>
 						</div>
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="multiplexing" class="tsd-anchor"></a>
-					<h3>MULTIPLEXING</h3>
-					<div class="tsd-signature tsd-kind-icon">MULTIPLEXING<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;8</span></div>
+					<a name="launch" class="tsd-anchor"></a>
+					<h3>LAUNCH</h3>
+					<div class="tsd-signature tsd-kind-icon">LAUNCH<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2</span></div>
 					<aside class="tsd-sources">
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>Multiplexing option, indicates multiplexing would be activated on
-								enstablished stream, and need to use multipexing APIs related with channel
-							instread of APIs related strema to send/receive data.</p>
+							<p>There is on going application launch.</p>
 						</div>
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="plain" class="tsd-anchor"></a>
-					<h3>PLAIN</h3>
-					<div class="tsd-signature tsd-kind-icon">PLAIN<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2</span></div>
+					<a name="other" class="tsd-anchor"></a>
+					<h3>OTHER</h3>
+					<div class="tsd-signature tsd-kind-icon">OTHER<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;3</span></div>
 					<aside class="tsd-sources">
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>Encrypt option, indicates data would be transmitted with plain mode.
-							which means that transmitting data would be encrypted in default.</p>
+							<p>There is another on going operation of an indeterminate type.</p>
 						</div>
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="port_forwarding" class="tsd-anchor"></a>
-					<h3>PORT_<wbr>FORWARDING</h3>
-					<div class="tsd-signature tsd-kind-icon">PORT_<wbr>FORWARDING<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;16</span></div>
+					<a name="upload" class="tsd-anchor"></a>
+					<h3>UPLOAD</h3>
+					<div class="tsd-signature tsd-kind-icon">UPLOAD<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1</span></div>
 					<aside class="tsd-sources">
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>PortForwarding option, indicates port forwarding would be activated
-								on established stream. This options should bitwise with &#39;Multiplexing&#39;
-							option.</p>
-						</div>
-					</div>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-					<a name="reliable" class="tsd-anchor"></a>
-					<h3>RELIABLE</h3>
-					<div class="tsd-signature tsd-kind-icon">RELIABLE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;4</span></div>
-					<aside class="tsd-sources">
-					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>Relaible option, indicates data transmission would be reliable, and be
-								guranteed to received by remote peer, which acts as TCP transmission
-								protocol. Without this option bitwised, the transmission would be
-							unreliable as UDP transmission protocol.</p>
+							<p>There is an on going upload.</p>
 						</div>
 					</div>
 				</section>
@@ -178,7 +152,7 @@
 					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/appmanagerplugin.html">App<wbr>Manager<wbr>Plugin</a>
 					</li>
-					<li class="current tsd-kind-module tsd-is-not-exported">
+					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/carrierplugin.html">Carrier<wbr>Plugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
@@ -211,7 +185,7 @@
 					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/hiveplugin.html">Hive<wbr>Plugin</a>
 					</li>
-					<li class=" tsd-kind-module tsd-is-not-exported">
+					<li class="current tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/titlebarplugin.html">Title<wbr>Bar<wbr>Plugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
@@ -221,119 +195,41 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
-						<a href="carrierplugin.candidatetype.html" class="tsd-kind-icon">Candidate<wbr>Type</a>
-					</li>
-					<li class=" tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
-						<a href="carrierplugin.closereason.html" class="tsd-kind-icon">Close<wbr>Reason</a>
-					</li>
-					<li class=" tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
-						<a href="carrierplugin.connectionstatus.html" class="tsd-kind-icon">Connection<wbr>Status</a>
-					</li>
-					<li class=" tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
-						<a href="carrierplugin.filetransferstate.html" class="tsd-kind-icon">File<wbr>Transfer<wbr>State</a>
-					</li>
-					<li class=" tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
-						<a href="carrierplugin.networktopology.html" class="tsd-kind-icon">Network<wbr>Topology</a>
-					</li>
-					<li class=" tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
-						<a href="carrierplugin.portforwardingprotocol.html" class="tsd-kind-icon">Port<wbr>Forwarding<wbr>Protocol</a>
-					</li>
-					<li class=" tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
-						<a href="carrierplugin.presencestatus.html" class="tsd-kind-icon">Presence<wbr>Status</a>
-					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
-						<a href="carrierplugin.streammode.html" class="tsd-kind-icon">Stream<wbr>Mode</a>
+						<a href="titlebarplugin.titlebaractivitytype.html" class="tsd-kind-icon">Title<wbr>Bar<wbr>Activity<wbr>Type</a>
 						<ul>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="carrierplugin.streammode.html#compress" class="tsd-kind-icon">COMPRESS</a>
+								<a href="titlebarplugin.titlebaractivitytype.html#download" class="tsd-kind-icon">DOWNLOAD</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="carrierplugin.streammode.html#multiplexing" class="tsd-kind-icon">MULTIPLEXING</a>
+								<a href="titlebarplugin.titlebaractivitytype.html#launch" class="tsd-kind-icon">LAUNCH</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="carrierplugin.streammode.html#plain" class="tsd-kind-icon">PLAIN</a>
+								<a href="titlebarplugin.titlebaractivitytype.html#other" class="tsd-kind-icon">OTHER</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="carrierplugin.streammode.html#port_forwarding" class="tsd-kind-icon">PORT_<wbr>FORWARDING</a>
-							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
-								<a href="carrierplugin.streammode.html#reliable" class="tsd-kind-icon">RELIABLE</a>
+								<a href="titlebarplugin.titlebaractivitytype.html#upload" class="tsd-kind-icon">UPLOAD</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
 					<li class=" tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
-						<a href="carrierplugin.streamstate.html" class="tsd-kind-icon">Stream<wbr>State</a>
+						<a href="titlebarplugin.titlebarbehavior.html" class="tsd-kind-icon">Title<wbr>Bar<wbr>Behavior</a>
 					</li>
 					<li class=" tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
-						<a href="carrierplugin.streamtype.html" class="tsd-kind-icon">Stream<wbr>Type</a>
+						<a href="titlebarplugin.titlebarforegroundmode.html" class="tsd-kind-icon">Title<wbr>Bar<wbr>Foreground<wbr>Mode</a>
+					</li>
+					<li class=" tsd-kind-enum tsd-parent-kind-module tsd-is-not-exported">
+						<a href="titlebarplugin.titlebarnavigationmode.html" class="tsd-kind-icon">Title<wbr>Bar<wbr>Navigation<wbr>Mode</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/carrierplugin.carrier.html" class="tsd-kind-icon">Carrier</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/carrierplugin.carriermanager.html" class="tsd-kind-icon">Carrier<wbr>Manager</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/carrierplugin.filetransfer.html" class="tsd-kind-icon">File<wbr>Transfer</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/carrierplugin.group.html" class="tsd-kind-icon">Group</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/carrierplugin.session.html" class="tsd-kind-icon">Session</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../interfaces/carrierplugin.stream.html" class="tsd-kind-icon">Stream</a>
+						<a href="../interfaces/titlebarplugin.titlebarmanager.html" class="tsd-kind-icon">Title<wbr>Bar<wbr>Manager</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../modules/carrierplugin.html#addressinfo" class="tsd-kind-icon">Address<wbr>Info</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../modules/carrierplugin.html#bootstrapnode" class="tsd-kind-icon">Bootstrap<wbr>Node</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../modules/carrierplugin.html#carriercallbacks" class="tsd-kind-icon">Carrier<wbr>Callbacks</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../modules/carrierplugin.html#filetransfercallbacks" class="tsd-kind-icon">File<wbr>Transfer<wbr>Callbacks</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../modules/carrierplugin.html#filetransferinfo" class="tsd-kind-icon">File<wbr>Transfer<wbr>Info</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../modules/carrierplugin.html#friendinfo" class="tsd-kind-icon">Friend<wbr>Info</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../modules/carrierplugin.html#groupcallbacks" class="tsd-kind-icon">Group<wbr>Callbacks</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../modules/carrierplugin.html#int" class="tsd-kind-icon">Int</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../modules/carrierplugin.html#onfriendinviteresponse" class="tsd-kind-icon">On<wbr>Friend<wbr>Invite<wbr>Response</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../modules/carrierplugin.html#onsessionrequestcomplete" class="tsd-kind-icon">On<wbr>Session<wbr>Request<wbr>Complete</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-has-type-parameter tsd-is-not-exported">
-						<a href="../modules/carrierplugin.html#opaque" class="tsd-kind-icon">Opaque</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../modules/carrierplugin.html#options" class="tsd-kind-icon">Options</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../modules/carrierplugin.html#streamcallbacks" class="tsd-kind-icon">Stream<wbr>Callbacks</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../modules/carrierplugin.html#transportinfo" class="tsd-kind-icon">Transport<wbr>Info</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
-						<a href="../modules/carrierplugin.html#userinfo-1" class="tsd-kind-icon">User<wbr>Info</a>
+						<a href="../modules/titlebarplugin.html#titlebarmenuitem" class="tsd-kind-icon">Title<wbr>Bar<wbr>Menu<wbr>Item</a>
 					</li>
 				</ul>
 			</nav>
