--- a/static/references/trinity_plugins/interfaces/didplugin.diddocument.html
+++ b/static/references/trinity_plugins/interfaces/didplugin.diddocument.html
@@ -323,14 +323,14 @@
 									<ul class="tsd-parameters">
 										<li class="tsd-parameter-siganture">
 											<ul class="tsd-signatures tsd-kind-type-literal tsd-is-not-exported">
-												<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>data<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+												<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>publicKey<span class="tsd-signature-symbol">: </span><a href="didplugin.publickey.html" class="tsd-signature-type">PublicKey</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 											</ul>
 											<ul class="tsd-descriptions">
 												<li class="tsd-description">
 													<h4 class="tsd-parameters-title">Parameters</h4>
 													<ul class="tsd-parameters">
 														<li>
-															<h5>data: <span class="tsd-signature-type">any</span></h5>
+															<h5>publicKey: <a href="didplugin.publickey.html" class="tsd-signature-type">PublicKey</a></h5>
 														</li>
 													</ul>
 													<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -369,7 +369,7 @@
 					<a name="getpublickey" class="tsd-anchor"></a>
 					<h3>get<wbr>Public<wbr>Key</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface tsd-is-not-exported">
-						<li class="tsd-signature tsd-kind-icon">get<wbr>Public<wbr>Key<span class="tsd-signature-symbol">(</span>didString<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="didplugin.publickey.html" class="tsd-signature-type">PublicKey</a></li>
+						<li class="tsd-signature tsd-kind-icon">get<wbr>Public<wbr>Key<span class="tsd-signature-symbol">(</span>didString<span class="tsd-signature-symbol">: </span><a href="../modules/didplugin.html#didurl" class="tsd-signature-type">DIDURL</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="didplugin.publickey.html" class="tsd-signature-type">PublicKey</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
@@ -378,7 +378,7 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>didString: <span class="tsd-signature-type">string</span></h5>
+									<h5>didString: <a href="../modules/didplugin.html#didurl" class="tsd-signature-type">DIDURL</a></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <a href="didplugin.publickey.html" class="tsd-signature-type">PublicKey</a></h4>
@@ -686,7 +686,13 @@
 						<a href="../modules/didplugin.html">DIDPlugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="../modules/fingerprintplugin.html">Fingerprint<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/hiveplugin.html">Hive<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="../modules/titlebarplugin.html">Title<wbr>Bar<wbr>Plugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="../modules/walletplugin.html">Wallet<wbr>Plugin</a>
@@ -781,6 +787,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-module tsd-is-not-exported">
 						<a href="didplugin.verifiablepresentationbuilder.html" class="tsd-kind-icon">Verifiable<wbr>Presentation<wbr>Builder</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
+						<a href="../modules/didplugin.html#base58publickey" class="tsd-kind-icon">Base58<wbr>Public<wbr>Key</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
 						<a href="../modules/didplugin.html#credentialid" class="tsd-kind-icon">CredentialID</a>
