--- a/static/references/trinity_plugins/modules/hiveplugin.html
+++ b/static/references/trinity_plugins/modules/hiveplugin.html
@@ -181,8 +181,14 @@
 					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="didplugin.html">DIDPlugin</a>
 					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="fingerprintplugin.html">Fingerprint<wbr>Plugin</a>
+					</li>
 					<li class="current tsd-kind-module tsd-is-not-exported">
 						<a href="hiveplugin.html">Hive<wbr>Plugin</a>
+					</li>
+					<li class=" tsd-kind-module tsd-is-not-exported">
+						<a href="titlebarplugin.html">Title<wbr>Bar<wbr>Plugin</a>
 					</li>
 					<li class=" tsd-kind-module tsd-is-not-exported">
 						<a href="walletplugin.html">Wallet<wbr>Plugin</a>
